<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardMaxElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="4">
        <TextView
            android:id="@+id/userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/user_id"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/imageViewId"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:fitsSystemWindows="true"
            android:scaleType="fitXY"
            android:src="@drawable/image"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/user_name"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/points"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/user_points"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_weight="1"/>


    </LinearLayout>


</androidx.cardview.widget.CardView>