<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:background="#f5f5f5"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">
    <RelativeLayout
        android:id="@+id/headerView"
        android:layout_width="wrap_content"
        android:layout_height="270dp">
        <View
            android:id="@+id/view7"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:background="@drawable/background_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/rounded_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="35dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImageId"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/account"/>

            <TextView
                android:id="@+id/userNameTxtId"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/user_name"
                android:textSize="15sp"
                android:layout_centerInParent="true"
                android:layout_marginTop="35dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/noticeId"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/alert"/>
        </RelativeLayout>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/spinId"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:text="@string/spin_and_earn"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="50dp"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/spinimage" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/fragmentId7hj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="280dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <androidx.cardview.widget.CardView
            android:id="@+id/mathQuizId"
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="1dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="110dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    android:src="@drawable/mathimage2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/math_quiz"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/watchVideoId"
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="1dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/white"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    android:src="@drawable/video"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/watch_video"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragmentId7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="460dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <androidx.cardview.widget.CardView
            android:id="@+id/inviteId"
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="1dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    android:src="@drawable/refer2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/refer_and_earn"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dailycheckId"
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="1dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="110dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    android:src="@drawable/calendar"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/daily_checking"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:itemBackground="@color/purple_200"
            app:itemIconSize="30sp"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/black"
            app:menu="@menu/bottom_nav_menu"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>